// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`multivariate (parallel) canvas renders base one axis per category, one polyline per field 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666667,"y":94.9}},
{"type":"lineTo","props":{"x":253.333333,"y":116.2}},
{"type":"lineTo","props":{"x":360,"y":52.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666667,"y":94.9}},{"type":"lineTo","props":{"x":253.333333,"y":116.2}},{"type":"lineTo","props":{"x":360,"y":52.3}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":84.25}},
{"type":"lineTo","props":{"x":146.666667,"y":52.3}},
{"type":"lineTo","props":{"x":253.333333,"y":137.5}},
{"type":"lineTo","props":{"x":360,"y":94.9}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":84.25}},{"type":"lineTo","props":{"x":146.666667,"y":52.3}},{"type":"lineTo","props":{"x":253.333333,"y":137.5}},{"type":"lineTo","props":{"x":360,"y":94.9}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":57.625}},
{"type":"lineTo","props":{"x":146.666667,"y":137.5}},
{"type":"lineTo","props":{"x":253.333333,"y":62.95}},
{"type":"lineTo","props":{"x":360,"y":116.2}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":57.625}},{"type":"lineTo","props":{"x":146.666667,"y":137.5}},{"type":"lineTo","props":{"x":253.333333,"y":62.95}},{"type":"lineTo","props":{"x":360,"y":116.2}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders color byName fixed-color override 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666667,"y":94.9}},
{"type":"lineTo","props":{"x":253.333333,"y":116.2}},
{"type":"lineTo","props":{"x":360,"y":52.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666667,"y":94.9}},{"type":"lineTo","props":{"x":253.333333,"y":116.2}},{"type":"lineTo","props":{"x":360,"y":52.3}}]}},
{"type":"strokeStyle","props":{"value":"#f2495c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":84.25}},
{"type":"lineTo","props":{"x":146.666667,"y":52.3}},
{"type":"lineTo","props":{"x":253.333333,"y":137.5}},
{"type":"lineTo","props":{"x":360,"y":94.9}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":84.25}},{"type":"lineTo","props":{"x":146.666667,"y":52.3}},{"type":"lineTo","props":{"x":253.333333,"y":137.5}},{"type":"lineTo","props":{"x":360,"y":94.9}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":57.625}},
{"type":"lineTo","props":{"x":146.666667,"y":137.5}},
{"type":"lineTo","props":{"x":253.333333,"y":62.95}},
{"type":"lineTo","props":{"x":360,"y":116.2}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":57.625}},{"type":"lineTo","props":{"x":146.666667,"y":137.5}},{"type":"lineTo","props":{"x":253.333333,"y":62.95}},{"type":"lineTo","props":{"x":360,"y":116.2}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders edge cases null gap (a missing value breaks the polyline) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":253.333333,"y":31}},
{"type":"lineTo","props":{"x":360,"y":52.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":253.333333,"y":31}},{"type":"lineTo","props":{"x":360,"y":52.3}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":84.25}},
{"type":"lineTo","props":{"x":146.666667,"y":52.3}},
{"type":"lineTo","props":{"x":253.333333,"y":66.5}},
{"type":"lineTo","props":{"x":360,"y":94.9}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":84.25}},{"type":"lineTo","props":{"x":146.666667,"y":52.3}},{"type":"lineTo","props":{"x":253.333333,"y":66.5}},{"type":"lineTo","props":{"x":360,"y":94.9}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders edge cases single line (one numeric field) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666667,"y":31}},
{"type":"lineTo","props":{"x":253.333333,"y":31}},
{"type":"lineTo","props":{"x":360,"y":52.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666667,"y":31}},{"type":"lineTo","props":{"x":253.333333,"y":31}},{"type":"lineTo","props":{"x":360,"y":52.3}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders layout vertical (axes top-to-bottom) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":320,"y":16}},
{"type":"lineTo","props":{"x":228.8,"y":89.333333}},
{"type":"lineTo","props":{"x":198.4,"y":162.666667}},
{"type":"lineTo","props":{"x":289.6,"y":236}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":320,"y":16}},{"type":"lineTo","props":{"x":228.8,"y":89.333333}},{"type":"lineTo","props":{"x":198.4,"y":162.666667}},{"type":"lineTo","props":{"x":289.6,"y":236}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":244,"y":16}},
{"type":"lineTo","props":{"x":289.6,"y":89.333333}},
{"type":"lineTo","props":{"x":168,"y":162.666667}},
{"type":"lineTo","props":{"x":228.8,"y":236}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":244,"y":16}},{"type":"lineTo","props":{"x":289.6,"y":89.333333}},{"type":"lineTo","props":{"x":168,"y":162.666667}},{"type":"lineTo","props":{"x":228.8,"y":236}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":282,"y":16}},
{"type":"lineTo","props":{"x":168,"y":89.333333}},
{"type":"lineTo","props":{"x":274.4,"y":162.666667}},
{"type":"lineTo","props":{"x":198.4,"y":236}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":282,"y":16}},{"type":"lineTo","props":{"x":168,"y":89.333333}},{"type":"lineTo","props":{"x":274.4,"y":162.666667}},{"type":"lineTo","props":{"x":198.4,"y":236}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders line style line opacity 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666667,"y":94.9}},
{"type":"lineTo","props":{"x":253.333333,"y":116.2}},
{"type":"lineTo","props":{"x":360,"y":52.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666667,"y":94.9}},{"type":"lineTo","props":{"x":253.333333,"y":116.2}},{"type":"lineTo","props":{"x":360,"y":52.3}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":84.25}},
{"type":"lineTo","props":{"x":146.666667,"y":52.3}},
{"type":"lineTo","props":{"x":253.333333,"y":137.5}},
{"type":"lineTo","props":{"x":360,"y":94.9}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":84.25}},{"type":"lineTo","props":{"x":146.666667,"y":52.3}},{"type":"lineTo","props":{"x":253.333333,"y":137.5}},{"type":"lineTo","props":{"x":360,"y":94.9}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":57.625}},
{"type":"lineTo","props":{"x":146.666667,"y":137.5}},
{"type":"lineTo","props":{"x":253.333333,"y":62.95}},
{"type":"lineTo","props":{"x":360,"y":116.2}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":57.625}},{"type":"lineTo","props":{"x":146.666667,"y":137.5}},{"type":"lineTo","props":{"x":253.333333,"y":62.95}},{"type":"lineTo","props":{"x":360,"y":116.2}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders line style line width 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":4}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666667,"y":94.9}},
{"type":"lineTo","props":{"x":253.333333,"y":116.2}},
{"type":"lineTo","props":{"x":360,"y":52.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666667,"y":94.9}},{"type":"lineTo","props":{"x":253.333333,"y":116.2}},{"type":"lineTo","props":{"x":360,"y":52.3}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":84.25}},
{"type":"lineTo","props":{"x":146.666667,"y":52.3}},
{"type":"lineTo","props":{"x":253.333333,"y":137.5}},
{"type":"lineTo","props":{"x":360,"y":94.9}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":84.25}},{"type":"lineTo","props":{"x":146.666667,"y":52.3}},{"type":"lineTo","props":{"x":253.333333,"y":137.5}},{"type":"lineTo","props":{"x":360,"y":94.9}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":57.625}},
{"type":"lineTo","props":{"x":146.666667,"y":137.5}},
{"type":"lineTo","props":{"x":253.333333,"y":62.95}},
{"type":"lineTo","props":{"x":360,"y":116.2}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":57.625}},{"type":"lineTo","props":{"x":146.666667,"y":137.5}},{"type":"lineTo","props":{"x":253.333333,"y":62.95}},{"type":"lineTo","props":{"x":360,"y":116.2}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders smooth curves the polylines through the axis crossings 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":31,"cpx2":112.529396,"cpy2":81.266427,"x":146.666667,"y":94.9}},
{"type":"bezierCurveTo","props":{"cpx1":176.529396,"cpy1":106.826427,"cpx2":223.470604,"cpy2":122.163214,"x":253.333333,"y":116.2}},
{"type":"bezierCurveTo","props":{"cpx1":287.470604,"cpy1":109.383214,"cpx2":360,"cpy2":52.3,"x":360,"y":52.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":31,"cpx2":112.529396,"cpy2":81.266427,"x":146.666667,"y":94.9}},{"type":"bezierCurveTo","props":{"cpx1":176.529396,"cpy1":106.826427,"cpx2":223.470604,"cpy2":122.163214,"x":253.333333,"y":116.2}},{"type":"bezierCurveTo","props":{"cpx1":287.470604,"cpy1":109.383214,"cpx2":360,"cpy2":52.3,"x":360,"y":52.3}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":84.25}},
{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":84.25,"cpx2":117.915887,"cpy2":45.123536,"x":146.666667,"y":52.3}},
{"type":"bezierCurveTo","props":{"cpx1":181.915887,"cpy1":61.098536,"cpx2":218.576284,"cpy2":130.559452,"x":253.333333,"y":137.5}},
{"type":"bezierCurveTo","props":{"cpx1":282.576284,"cpy1":143.339452,"cpx2":360,"cpy2":94.9,"x":360,"y":94.9}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":84.25}},{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":84.25,"cpx2":117.915887,"cpy2":45.123536,"x":146.666667,"y":52.3}},{"type":"bezierCurveTo","props":{"cpx1":181.915887,"cpy1":61.098536,"cpx2":218.576284,"cpy2":130.559452,"x":253.333333,"y":137.5}},{"type":"bezierCurveTo","props":{"cpx1":282.576284,"cpy1":143.339452,"cpx2":360,"cpy2":94.9,"x":360,"y":94.9}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":57.625}},
{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":57.625,"cpx2":114.287375,"cpy2":136.691783,"x":146.666667,"y":137.5}},
{"type":"bezierCurveTo","props":{"cpx1":178.287375,"cpy1":138.289283,"cpx2":219.93239,"cpy2":66.284875,"x":253.333333,"y":62.95}},
{"type":"bezierCurveTo","props":{"cpx1":283.93239,"cpy1":59.894875,"cpx2":360,"cpy2":116.2,"x":360,"y":116.2}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":57.625}},{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":57.625,"cpx2":114.287375,"cpy2":136.691783,"x":146.666667,"y":137.5}},{"type":"bezierCurveTo","props":{"cpx1":178.287375,"cpy1":138.289283,"cpx2":219.93239,"cpy2":66.284875,"x":253.333333,"y":62.95}},{"type":"bezierCurveTo","props":{"cpx1":283.93239,"cpy1":59.894875,"cpx2":360,"cpy2":116.2,"x":360,"y":116.2}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (radar) canvas renders one polygon per numeric field, filling the canvas 1`] = `[]`;
